# zed99_ws

./: README.md  sensor_test_2025-06-26-18-19-58.bag
devel/: .catkin  local_setup.sh  setup.sh
devel/include/cone_detection/: Cone3d.h  Cone3dArray.h  DriveCmd.h
devel/include/rtcm_msgs/: Message.h
devel/include/zed_nodelets/: ZedConfig.h
devel/lib/cone_detection/: cone_3d_node  motor_controller  path_planner_pairing
devel/lib/pkgconfig/: car_description.pc  cone_detection.pc  ntrip_ros.pc  rtcm_msgs.pc  ublox_gps.pc  ublox_msgs.pc  ublox_serialization.pc  zed_interfaces.pc  zed_nodelets.pc  zed_wrapper.pc
devel/lib/python3/dist-packages/cone_detection/msg/: _Cone3d.py  _Cone3dArray.py  _DriveCmd.py  __init__.py
devel/lib/python3/dist-packages/rtcm_msgs/msg/: _Message.py
devel/lib/python3/dist-packages/zed_nodelets/cfg/: ZedConfig.py
devel/share/car_description/cmake/: car_descriptionConfig.cmake
devel/share/common-lisp/ros/cone_detection/msg/: Cone3d.lisp  Cone3dArray.lisp  DriveCmd.lisp  _package.lisp  _package_Cone3d.lisp  _package_Cone3dArray.lisp  _package_DriveCmd.lisp  cone_detection-msg.asd
devel/share/common-lisp/ros/rtcm_msgs/msg/: Message.lisp
devel/share/cone_detection/cmake/: cone_detection-msg-paths.cmake  cone_detectionConfig.cmake
devel/share/gennodejs/ros/cone_detection/msg/: Cone3d.js  Cone3dArray.js  DriveCmd.js  _index.js
devel/share/gennodejs/ros/rtcm_msgs/msg/: Message.js
devel/share/gennodejs/ros/ublox_msgs/msg/: _index.js
devel/share/gennodejs/ros/zed_interfaces/msg/: _index.js
devel/share/gennodejs/ros/zed_interfaces/srv/: _index.js
devel/share/ntrip_ros/cmake/: ntrip_rosConfig.cmake
devel/share/roseus/ros/cone_detection/: manifest.l
devel/share/roseus/ros/cone_detection/msg/: Cone3d.l  Cone3dArray.l  DriveCmd.l
devel/share/roseus/ros/rtcm_msgs/: manifest.l
devel/share/roseus/ros/rtcm_msgs/msg/: Message.l
devel/share/roseus/ros/ublox_msgs/: manifest.l
devel/share/roseus/ros/zed_interfaces/: manifest.l
devel/share/rtcm_msgs/cmake/: rtcm_msgs-msg-paths.cmake  rtcm_msgsConfig.cmake
devel/share/ublox_gps/cmake/: ublox_gpsConfig.cmake
devel/share/ublox_msgs/cmake/: ublox_msgs-msg-paths.cmake  ublox_msgsConfig.cmake
devel/share/ublox_serialization/cmake/: ublox_serializationConfig.cmake
devel/share/zed_interfaces/cmake/: zed_interfaces-msg-extras.cmake  zed_interfaces-msg-paths.cmake  zed_interfacesConfig.cmake
devel/share/zed_nodelets/cmake/: zed_nodeletsConfig.cmake
devel/share/zed_wrapper/cmake/: zed_wrapperConfig.cmake
scripts/: covariance_tuner.py
src/car_description/: CMakeLists.txt  package.xml
src/car_description/urdf/: car_description.urdf.xacro
src/cone_detection/: CMakeLists.txt  package.xml
src/cone_detection/launch/: car_autonomy.launch  ekf_localization.launch  ntrip_ros.launch
src/cone_detection/msg/: Cone3d.msg  Cone3dArray.msg
src/cone_detection/rviz/: view_car_autonomy.rviz
src/cone_detection/scripts/: cone_detect.py
src/cone_detection/src/: cone_3d.cpp  ekf_config.yaml  motor_controller.cpp  path_planner_pairing.cpp  ublox_device.launch  zed-f9p.yaml
src/ublox_gps/include/ublox_gps/: gps.h  node.h
src/ublox_gps/launch/: ublox_device.launch
src/ublox_gps/src/: gps.cpp  node.cpp
